--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "@rails/webpacker": "5.3.0",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "@rails/webpacker": "5.4.3",
     "@reach/router": "^1.3.3",
     "@single-cell-portal/igv": "2.6.4-beta.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -30,7 +31,8 @@
     "plotly.js-dist": "2.2.0",
     "pluralize": "^8.0.0",
     "pnp-webpack-plugin": "^1.6.4",
-    "postcss-cssnext": "3.1.0",
+    "postcss": "^8.2.10",
+    "postcss-loader": "^4.0.3",
     "prop-types": "^15.7.2",
     "query-string": "^6.11.0",
     "react": "^16.12.0",
