--- a/image-pipeline/package.json
+++ b/image-pipeline/package.json
@@ -13,12 +13,12 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-react": "^7.8.3",
     "@databiosphere/bard-client": "^0.1.0",
+    "@google-cloud/storage": "^6.4.2",
     "core-js": "^3.6.4",
     "exifreader": "4.5.1",
     "fflate": "^0.7.3",
     "puppeteer": "^15.4.0",
-    "sharp": "0.30.7",
-    "@google-cloud/storage":  "^6.4.2"
+    "sharp": "0.30.7"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.0",
